--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
+asgiref==3.7.2
 blinker==1.6.3
 Bootstrap-Flask==2.3.2
+certifi==2023.7.22
 click==8.1.7
 colorama==0.4.6
 distlib==0.3.7
+Django==4.2.6
 filelock==3.13.0
 Flask==3.0.0
 Flask-MySQLdb==2.0.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 legacy-cgi==2.6
 MarkupSafe==2.1.3
 mysqlclient==2.2.0
+pipenv==2023.10.24
 platformdirs==3.11.0
+psycopg2==2.9.9
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
+typing_extensions==4.8.0
+tzdata==2023.3
 virtualenv==20.24.6
 Werkzeug==3.0.0
 WTForms==3.1.0
